objects/Lead_Creation_ADF__e.object
<CustomObject>
    <description>PE- Lead Creation ADF</description>
    <fields>
        <fullName>Additional_Source_Info__c</fullName>
        <label>Additional Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine1_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=1&gt;

concatenate this Address Line 1 with the other line 2-5 into the standard Lead Address field using the \n line break to separate the lines.</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine2_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=2&gt;</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressLine3_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;street line=3&gt;</description>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressType_TXT__c</fullName>
        <description>picklist (work, home, delivery)    --&gt; Created as Text

&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt; type parameter value</description>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApartmentNumber_NUM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;apartment&gt;</description>
        <label>Apartment Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_and_Time__c</fullName>
        <label>Appointment Date and Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Id__c</fullName>
        <label>Appointment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Location__c</fullName>
        <label>Appointment Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Notes__c</fullName>
        <label>Appointment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_type__c</fullName>
        <label>Appointment type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Style_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;bodystyle&gt;</description>
        <label>Body Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnitSubDivision_CD__c</fullName>
        <label>Business Unit SubDivision</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Code_CD__c</fullName>
        <description>A-Honda, B-Acura, M-Powersports, P-Power Equipment/Maring/Engine</description>
        <label>Business Unit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <label>Chat_Transcript</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;city&gt;</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color_TXT__c</fullName>
        <description>&quot;&lt;vehicle&gt;&lt;Colorcombination&gt;

on the Lead object, break up into key value pairs. &quot;
 using the adf xml schema, break up multiple color combinations into a human readable format: 
e.g. xml: &lt;colorcombination&gt;&lt;interiorcolor&gt;Blue&lt;/interiorcolor&gt;&lt;exteriorcolor&gt;Black&lt;/exteriorcolor&gt;&lt;preference&gt;1&lt;/preference&gt;&lt;interiorcolor&gt;Red&lt;/interiorcolor&gt;&lt;exteriorcolor&gt;White&lt;/exteriorcolor&gt;&lt;preference&gt;2&lt;/preference&gt;
once converted should read (also add \n linebreak)
1. Blue (interior), Black (exterior)
2. Red (interior), White (exterior)</description>
        <label>Color</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_TXT__c</fullName>
        <description>Picklist (excellent, good, fair, poor, unknown)

&lt;vehicle&gt;&lt;condition&gt;</description>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMethod_TXT__c</fullName>
        <description>Type is changed to Text from Picklist
If &lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;email preferredcontact=1&gt; then &quot;Email&quot; else</description>
        <label>Contact Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Time_TM__c</fullName>
        <description>Type is changed to Text from picklist
key value pair based on the parameter values of the following:
&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone&gt; type:time
example:
phone:morning
fax:afternoon
cellphone:nopreference
pager:day</description>
        <label>Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_person__c</fullName>
        <label>Contact person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_type_TXT__c</fullName>
        <description>picklist (Individual, Business)  --&gt; Created as Text

&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name&gt; parameter value for Type (Individual or Business)</description>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;country&gt;</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_IDs__c</fullName>
        <description>&lt;customer&gt;&lt;id&gt; (xml with multiple)</description>
        <label>Customer IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deal_ID__c</fullName>
        <label>Deal ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Link__c</fullName>
        <label>Deal Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerAccountfromADF_TXT__c</fullName>
        <description>&lt;vendor&gt;&lt;vendorname&gt; + \n + &lt;vendor&gt;&lt;url&gt;</description>
        <label>Dealer Account from ADF</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DealerContactfromADF_TXT__c</fullName>
        <description>On Oppty: Lookup to Contact (RT filter != Provider Contact and != Vendor Contact)

&lt;vendor&gt;&lt;contact&gt; (xml with vendor contacts)</description>
        <label>Dealer Contact from ADF</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_IDs__c</fullName>
        <description>&lt;vendor&gt;&lt;id&gt; (xml with multiple)</description>
        <label>Dealer IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Confirmation_Number__c</fullName>
        <label>Deposit Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_DESC__c</fullName>
        <description>&lt;customer&gt;&lt;comments&gt;</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doors_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;doors&gt;</description>
        <label>Doors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_TXT__c</fullName>
        <description>Type changed to Text
&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;email&gt;</description>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lead_Reference_Number__c</fullName>
        <label>External Lead Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lead_User_Identifier__c</fullName>
        <label>External Lead User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=fax&gt;</description>
        <label>Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Details_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;finance&gt;</description>
        <label>Financial Details</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstName_NM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name part=first&gt;</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Addres_URL__c</fullName>
        <label>IP Addres URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName_NM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name part=last&gt;</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadAdditionalInfos__c</fullName>
        <description>To Store offer information</description>
        <label>LeadAdditionalInfos</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Payload__c</fullName>
        <label>Lead Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Provider_Name__c</fullName>
        <label>Lead Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP_AMT__c</fullName>
        <label>MSRP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;make&gt;</description>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Name__c</fullName>
        <label>Marketing Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName_NM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name part=middle&gt;</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddlewareUUID__c</fullName>
        <label>MiddlewareUUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=cellphone&gt;</description>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name_NM__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;model&gt;</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Trim_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;trim&gt;</description>
        <label>Model Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NM__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name part=full&gt;</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Status_TXT__c</fullName>
        <description>picklist (unknown, rolledover, replaced, original)        --&gt;      created as Text

&lt;vehicle&gt;&lt;odometer status&gt;</description>
        <label>Odometer Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;odometer&gt;</description>
        <label>Odometer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odometer_Units_TXT__c</fullName>
        <description>picklist (km, mi)  --&gt; Created as Text

&lt;vehicle&gt;&lt;odometer units&gt;</description>
        <label>Odometer Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;Option&gt;

On the Oppty, this whould be parsed into individual records and be stored in a child object to Oppyt called AdditionalInfo__c.  see that tab for filed mapping.</description>
        <label>Options</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherContacts_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact Primarcycontact=0&gt; (for POC, we could just dump the rest of the xml here, we may need to later further structure it as needed.</description>
        <label>Other Contacts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherLeadProvider_TXT__c</fullName>
        <description>&lt;Provider&gt; (provider xml for additional providers 2 ff)</description>
        <label>Other Lead Provider</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pager_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=pager&gt;</description>
        <label>Pager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneType_NM__c</fullName>
        <description>Phone Type for Voice, Cell Phone values</description>
        <label>Phone Type NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;phone type=phone&gt;</description>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_IDs__c</fullName>
        <description>&lt;prospect&gt;&lt;id&gt;  (multiple ids possible) 

1. store this field in the Lead.Prospect IDs field
2. see adf xml document for ID xml structure. Extract the id in the &lt;id source = &quot;Honda LDRA&quot;&gt; tag and store on the Lead object in the External ID field.  This will be needed later when we have to publish disposition data from the Oppty to the Disposition platform event.</description>
        <label>Prospect IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderContactDetails_TXT__c</fullName>
        <description>&lt;provider&gt;&lt;contact primarycontact=1&gt;</description>
        <label>Provider Contact Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProviderDetails_TXT__c</fullName>
        <description>&lt;provider&gt;&lt;name&gt; + \n + &lt;provider&gt;&lt;service&gt; + \n + &lt;provider&gt;&lt;url&gt; + \n + &lt;provider&gt;&lt;email&gt; + \n + &lt;provider&gt;&lt;phone&gt;

 1. store this field in the Lead.Provider Detail field 1:1 mapping
2. see the adf xml structure for &lt;provider&gt; category.  extract the &lt;provider&gt;&lt;name&gt; value, e.g. &quot;Powersports Website AHM&quot;.  Lookup the record on the Account object with Recordtype = Provider and where the Account name matches this value.  Get the SFDC ID of the Account and store in the Lead.Lead Provider lookup field.  This should then be a lookup relation from Lead to the Provider Account

for dev or testing, please use the following sample data to load into the Account with Record type = Provider: http://confluence.connectedconsumer.hondaweb.com/download/attachments/72679725/Lead%20Providers_EDW.xlsx?version=1&amp;modificationDate=1613700177000&amp;api=v2</description>
        <label>Provider Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_IDs__c</fullName>
        <description>&lt;provider&gt;&lt;id&gt; (xml with multiple)</description>
        <label>Provider IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Service__c</fullName>
        <label>Provider Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Tool__c</fullName>
        <label>Provider Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_URL__c</fullName>
        <label>Provider URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseEarliestDate_DT__c</fullName>
        <description>&lt;customer&gt;&lt;timeframe&gt;&lt;earliestdate&gt;</description>
        <label>Purchase Earliest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseHorizon_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;timeframe&gt;&lt;description&gt;</description>
        <label>Purchase Horizon</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseLatestDate_DT__c</fullName>
        <description>&lt;customer&gt;&lt;timeframe&gt;&lt;latestdate&gt;</description>
        <label>Purchase Latest Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_AMT__c</fullName>
        <label>Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Order_Number__c</fullName>
        <label>Salesforce Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_confirmation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send confirmation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shopping_Tool__c</fullName>
        <label>Shopping Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Unique_ID__c</fullName>
        <label>Source Unique ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_User__c</fullName>
        <label>Source User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;regioncode&gt;</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Number_NUM__c</fullName>
        <description>&lt;vehicle&gt;&lt;stock&gt;</description>
        <label>Stock Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_INIT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;name part=suffix&gt;</description>
        <label>Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tigger_Send_By_Date__c</fullName>
        <label>Tigger Send By Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeBalanceOwed_TXT__c</fullName>
        <label>Trade In Balance Owed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeMake_TXT__c</fullName>
        <label>Trade In Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeMileage_TXT__c</fullName>
        <label>Trade In Mileage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeModel_TXT__c</fullName>
        <label>Trade In Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeStatus_TXT__c</fullName>
        <label>Trade Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeValue_TXT__c</fullName>
        <label>Trade In Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeYear_YR__c</fullName>
        <label>Trade In Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Code__c</fullName>
        <label>Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_TXT__c</fullName>
        <description>&lt;vehicle&gt;&lt;transmission&gt;</description>
        <label>Transmission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_type_Code__c</fullName>
        <label>Trigger type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validateonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validateonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_IDs__c</fullName>
        <description>&lt;vehicle&gt;&lt;id&gt; (xml with multiple)

1. store this field in the Lead.Vehicle IDs field
2. see adf xml document for ID xml structure. Extract the value on the &lt;id source=&quot;Motorcycle&quot; sequence=&quot;1&quot;&gt;, e.g. &quot;CMX1100LM&quot; and store in Lead.Model ID for eCRM validation
3. Get the source parameter from id tag &lt;id source, e.g. &quot;Motorcycle&quot; and store it in the Business Unit SubDivision lead field</description>
        <label>Vehicle IDs</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vehicle_Interest_TXT__c</fullName>
        <description>Picklist (buy, lease, sell, trade-in, test-drive)

&lt;vehicle Interest&gt;</description>
        <label>Vehicle Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status_TX__c</fullName>
        <description>picklist (new, used, cpo)

&lt;vehicle status&gt;</description>
        <label>Vehicle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Email__c</fullName>
        <label>Vendor Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <label>Vendor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Number_NUM__c</fullName>
        <description>&lt;vehicle&gt;&lt;vin&gt;</description>
        <label>Vin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_YR__c</fullName>
        <description>&lt;vehicle&gt;&lt;year&gt;</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;postalcode</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDealerized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDealerized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEmailValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Email Validated</description>
        <label>isEmailValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPhoneValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Phone Validated</description>
        <label>isPhoneValidated</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Creation ADF</label>
    <pluralLabel>Lead Creation ADFs</pluralLabel>
</CustomObject>